Ajout d'un test pour Spark Local